syntax = "proto3";

package greetPackage;

message Greet {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greet greet = 1;
}

message GreetResponse {
    string response = 1;
}

service GreetService {
    //Unary Service
    rpc GreetUnary (GreetRequest) returns (GreetResponse) {}

    //Server Streaming Service
    rpc GreetServerStream (GreetRequest) returns (stream GreetResponse) {}

    //Client Streaming Service
    rpc GreetClientStream (stream GreetRequest) returns (GreetResponse) {}

    //Bi-Directional Streaming Service
    rpc GreetFullStream (stream GreetRequest) returns (stream GreetResponse) {}
}